docs: CHANGELOG v1.9.1 + L-095/096/097 lessons + PROGRESS update
CHANGELOG v1.9.1:
- CNPG migration, Redis replacement, all permission/encoding fixes
- 24 deployment warning-fix env vars
- Logback, DRL, OJK fixes

LESSONS.md:
- L-095: DB Table Ownership After Flyway (HHH000247 root cause + fix)
- L-096: Infinispan DataGrid RESP Connector Complexity
- L-097: CNPG vs Crunchy PostgreSQL Operator Comparison

PROGRESS.md:
- Updated snapshot: CNPG, Redis, 43/43 pods
- Added v1.9.1 iteration entry

Co-authored-by: CommandCodeBot <noreply@commandcode.ai>